--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "price-finder-pro-client",
+  "name": "price-finder-pro",
   "version": "1.0.0",
-  "description": "App for scraping prices from eComerse websites",
+  "description": "App for scraping prices from eComerce websites",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,9 +12,9 @@
   },
   "keywords": [
     "javascript",
-    "scrapping",
+    "scraping",
     "prices",
-    "ecomerse",
+    "ecomerce",
     "websites"
   ],
   "author": "Vitalii Dlugoborsky",
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/dluga/dluga.github.io/issues"
   },
-  "homepage": "https://github.com/dluga/dluga.github.io#readme"
+  "homepage": "https://github.com/dluga/dluga.github.io#readme",
+  "devDependencies": {
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
+  }
 }
