Configure package.json and webpack

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App for scraping prices from eComerce websites",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
